<resources>
    <string name="app_version">Ledger Wallet Android %s</string>
    <string name="btc_acronyme">BTC</string>
    <string name="home_p_title">Waiting for transactions…</string>
    <string name="home_p_subtitle">Transactions will automatically appear when manual validation is required.</string>
    <string name="home_p_action">PAIRED LEDGER WALLETS</string>
    <string name="home_p_bottom">Need help? Visit our help center.</string>
    <string name="home_np_title">No paired Ledger Wallet</string>
    <string name="home_np_subtitle">To enable second factor validation,\npair your Ledger Wallet with this smartphone.</string>
    <string name="home_np_action">PAIR A LEDGER WALLET</string>
    <string name="home_np_bottom">Need help? Visit our help center.</string>
    <string name="home_np_setup_unplugged">CONFIGURE A LEDGER UNPLUGGED</string>
    <string name="home_activity_menu_setup_unplugged">Ledger Unplugged</string>
    <string name="home_activity_menu_export_logs">Export logs</string>
    <string name="home_activity_menu_settings">Settings</string>
    <string name="install_keystore_title">Choose a password</string>
    <string name="install_keystore_top_text">Secure your Ledger Wallet app installation by
        choosing a master password:</string>
    <string name="install_keystore_password_hint">Password</string>
    <string name="install_keystore_confirm_hint">Confirmation</string>
    <string name="install_keystore_bottom_text">It will be required when launching the app
and accessing personal sensitive data.</string>
    <string name="install_keystore_password_mismatch">The password and the confirmation
        don\'t match.</string>
    <string name="install_keystore_install_error">An error occurred. Please contact the
        support.</string>
    <string name="install_keystore_too_short">Password must be at least 6 characters long.</string>
    <string name="unlock_keystore_title">Password required</string>
    <string name="unlock_keystore_top_text">To continue, please enter your master password:</string>
    <string name="unlock_keystore_password_hint">Password</string>
    <string name="unlock_keystore_bottom_text">If you can’t remember your master password,
you will need to reinstall the app.</string>
    <string name="unlock_keystore_wrong_password">Wrong password.</string>
    <string name="paired_dongle_activity_name">Paired Ledger Wallets</string>
    <string name="paired_dongle_paired_on">Paired on %s</string>
    <string name="create_dongle_title">Pair a Ledger Wallet</string>
    <string name="create_dongle_instruction_step_1">Scan the <b>pairing QR code</b> on the Ledger Wallet Chrome application.</string>
    <string name="create_dongle_instruction_step_2">This smartphone is creating a secure connection with your Ledger Wallet.</string>
    <string name="create_dongle_instruction_step_2_title">Establishing connection…</string>
    <string name="create_dongle_instruction_step_2_text">Please wait, this operation may take a while.</string>
    <string name="create_dongle_instruction_step_3">Grab your <b>security card</b> and enter the matching value for each character.</string>
    <string name="create_dongle_instruction_step_3_bottom">Enter the letter or digit in the black box matching \"%s\" on your security card.</string>
    <string name="create_dongle_instruction_step_4">Your Ledger Wallet is finalizing the pairing process with this smartphone.</string>
    <string name="create_dongle_instruction_step_4_title">Pairing in progress…</string>
    <string name="create_dongle_instruction_step_4_text">Please wait, this operation may take a while.</string>
    <string name="create_dongle_instruction_step_5">The pairing process is complete. Enter a name for this Ledger Wallet.</string>
    <string name="create_dongle_instruction_step_5_default_name">My Ledger Wallet</string>
    <string name="create_dongle_instruction_step_5_name_hint">Ledger Wallet name</string>
    <string name="create_dongle_instruction_step_5_error_title">Error</string>
    <string name="create_dongle_instruction_step_5_error_message">This name is used by another paired Ledger Wallet.</string>
    <string name="create_dongle_instruction_step_5_bottom">Choose a name to assign to this Ledger Wallet.</string>
    <string name="unplugged_welcome_activity_title">New wallet</string>
    <string name="unplugged_welcome_welcome_to_your_new_wallet">Welcome to your new Ledger Unplugged!</string>
    <string name="unplugged_welcome_create_or_recover">Would you like to create a new wallet or restore an existing one?</string>
    <string name="unplugged_welcome_use_as_new">Create a new wallet</string>
    <string name="unplugged_welcome_if_its_your_first_wallet">By generating a new recovery phrase</string>
    <string name="unplugged_welcome_recover_wallet">Recover an existing wallet</string>
    <string name="unplugged_welcome_if_you_lost_your_wallet">By entering your recovery phrase</string>
    <string name="unplugged_existing_activity_title">Existing wallet</string>
    <string name="unplugged_existing_existing_wallet">Your wallet is already configured.</string>
    <string name="unplugged_existing_compatible_wallets">Ledger Unplugged can be used with Mycelium and GreenBits Android bitcoin wallets.</string>
    <string name="unplugged_existing_install_mycelium">Mycelium</string>
    <string name="unplugged_existing_install_greenbits">GreenBits</string>
    <string name="unplugged_existing_view_on_play_store">View on Google Play Store</string>
    <string name="unplugged_existing_delete_unplugged">Reset the card</string>
    <string name="unplugged_existing_delete_unplugged_description">View on Fidesmo app</string>
    <string name="unplugged_security_activity_title">Security information</string>
    <string name="unplugged_security_step_text">A trusted smartphone is required to configure your Ledger Unplugged</string>
    <string name="unplugged_security_step_number">1.</string>
    <string name="unplugged_security_line_1">This configuration wizard handles highly sensitive information about your wallet.</string>
    <string name="unplugged_security_line_2_creation">It is very important to continue the creation process using a fully trusted smartphone to prevent anyone from accessing these data.</string>
    <string name="unplugged_security_line_2_restore">It is very important to continue the recovery process using a fully trusted smartphone to prevent anyone from accessing these data.</string>
    <string name="unplugged_security_line_3">A secure provisioning system will soon be available in a next release of this app.</string>
    <string name="unplugged_security_line_4">By clicking CONTINUE, you confirm that you are currently using a trusted smartphone.</string>
    <string name="unplugged_security_understood">I UNDERSTAND, CONTINUE</string>
    <string name="unplugged_pin_choice_activity_title_enter">PIN Code</string>
    <string name="unplugged_pin_choice_step_number_enter">2.</string>
    <string name="unplugged_pin_choice_step_instruction_enter">Choose a 4 digits code to allow you to secure the access of your wallet</string>
    <string name="unplugged_pin_choice_step_bottom_enter">Please note: your birth year or your debit/credit card pin are not secure PIN codes.</string>
    <string name="unplugged_pin_choice_activity_title_confirm">Confirmation</string>
    <string name="unplugged_pin_choice_step_number_confirm">3.</string>
    <string name="unplugged_pin_choice_step_instruction_confirm">Re-enter the PIN code chosen in the previous step</string>
    <string name="unplugged_pin_choice_step_bottom_confirm">Your PIN code will be asked each time you to use your Ledger Unplugged.</string>
    <string name="unplugged_pin_choice_dont_match_error">Your PIN code confirmation does not match.</string>
    <string name="unplugged_seed_activity_title">Recovery phrase</string>
    <string name="unplugged_seed_invalid_seed">Your recovery phrase does not seem to be valid.</string>
    <string name="unplugged_seed_header_step_number_create">4.</string>
    <string name="unplugged_seed_header_step_text_create">Write down your recovery phrase in the provided recovery sheet</string>
    <string name="unplugged_seed_bottom_text_create">Your recovery phrase won\'t be displayed again. Without it, you will not be able to access your bitcoins in case of loss or your Ledger Wallet.</string>
    <string name="unplugged_seed_button_text_create">I HAVE NOTED MY RECOVERY PHRASE</string>
    <string name="unplugged_seed_header_step_number_restore">4.</string>
    <string name="unplugged_seed_header_step_text_restore">Enter your 24 words recovery phrase to recover your bitcoin wallet</string>
    <string name="unplugged_seed_bottom_text_restore">Your recovery phrase is a group of 24 words that was provided to you when creating your wallet.</string>
    <string name="unplugged_seed_button_text_restore">I ENTERED MY RECOVERY PHRASE</string>
    <string name="unplugged_tap_activity_title">Ledger Unplugged</string>
    <string name="unplugged_tap_looking_for">Looking for your NFC wallet...</string>
    <string name="unplugged_tap_place_at_backside">Place your Ledger Unplugged card against the backside of your smartphone.</string>
    <string name="unplugged_tap_error_occured">Communication error, please try again.</string>
    <string name="unplugged_finalize_setup_activity_title">Almost ready</string>
    <string name="unplugged_finalize_setup_few_moments">In a few moments, you will be able to use your bitcoins in the fastest possible way.</string>
    <string name="unplugged_finalize_setup_step_text">Place and hold your Ledger Unplugged card against the backside of your smartphone</string>
    <string name="unplugged_finalize_setup_step_number">6.</string>
    <string name="unplugged_in_progress_activity_title">Configuration</string>
    <string name="unplugged_in_progress_please_wait">Please wait, this operation may take a while.</string>
    <string name="unplugged_in_progress_configuration">Configuration in progress...</string>
    <string name="unplugged_in_progress_step_text_creation">Keep holding your card while the creation of your wallet is in progress</string>
    <string name="unplugged_in_progress_step_text_restore">Keep holding your card while the recovery of your wallet is in progress</string>
    <string name="unplugged_in_progress_step_number">7.</string>
    <string name="unplugged_fidesmo_activity_title">Blank card</string>
    <string name="unplugged_fidesmo_top_text">Your Ledger Unplugged seems to be blank.</string>
    <string name="incoming_tx_title">CONFIRM TRANSACTION</string>
    <string name="incoming_tx_date" formatted="false">requested on %s at %s</string>
    <string name="trustlet_promotion_dialog_title">LEDGER TRUSTLET</string>
    <string name="trustlet_promotion_dialog_main_message">Your smartphone is compatible with Ledger Trustlet, our new Trusted Execution Environment technology.</string>
    <string name="trustlet_promotion_dialog_bottom_message">Would you like to know more about it?</string>
    <string name="settings_pref_internal_keystore_name">Use internal keystore</string>
    <string name="settings_pref_internal_keystore_summary">This will force you to unlock the application with a password each time.</string>
    <string name="settings_pref_change_password_name">Change the keystore password</string>
    <string name="settings_pref_change_password_summary">Change the keystore password</string>
    <string name="settings_pref_licences_name">Licences</string>
    <string name="settings_pref_licences_summary">Application licence and libraries information</string>
    <string name="settings_category_security">Security</string>
    <string name="settings_category_about">About</string>
    <string name="dialog_action_confirm">CONFIRM</string>
    <string name="dialog_action_close">CLOSE</string>
    <string name="dialog_action_cancel">CANCEL</string>
</resources>