<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_marginLeft="@dimen/large_margin"
    android:layout_marginRight="@dimen/large_margin"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">

    <co.ledger.wallet.core.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trustlet_promotion_dialog_title"
        app:fontStyle="semiBold"
        android:textSize="@dimen/large_font_size"
        app:kerning="@dimen/medium_font_spacing"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginBottom="@dimen/extra_extra_large_margin"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trustlet_big"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/extra_large_margin"/>

    <co.ledger.wallet.core.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trustlet_promotion_dialog_main_message"
        android:layout_marginLeft="@dimen/extra_extra_large_margin"
        android:layout_marginRight="@dimen/extra_extra_large_margin"
        android:textSize="@dimen/medium_font_size"
        app:kerning="@dimen/medium_font_spacing"
        android:textColor="@color/black"
        android:id="@+id/address"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:layout_gravity="center_horizontal" />

    <co.ledger.wallet.core.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trustlet_promotion_dialog_bottom_message"
        android:textSize="@dimen/medium_font_size"
        app:kerning="@dimen/medium_font_spacing"
        android:textColor="@color/black"
        android:gravity="center"
        app:fontStyle="semiBold"
        android:layout_marginTop="@dimen/almost_small_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/include_dialog_actions"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/large_margin"
        android:id="@+id/dialog_action_bar" />

</LinearLayout>