<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/huge_margin"
        android:paddingBottom="@dimen/huge_margin"
        android:paddingLeft="@dimen/extra_extra_large_margin"
        android:paddingRight="@dimen/extra_extra_large_margin">

        <co.ledger.wallet.core.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock_keystore_top_text"
            android:textColor="@color/black"
            app:kerning="@dimen/medium_font_spacing"
            android:textSize="@dimen/medium_font_size"
            app:fontStyle="regular"
            android:lineSpacingExtra="10dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bip39_edittext"
            android:paddingTop="@dimen/very_large_margin"
            android:paddingBottom="@dimen/very_large_margin">

            <co.ledger.wallet.core.widget.EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="@dimen/medium_font_size"
                android:paddingLeft="@dimen/extra_large_margin"
                android:paddingRight="@dimen/extra_large_margin"
                android:inputType="textPassword"
                android:hint="@string/unlock_keystore_password_hint"
                android:textColorHint="@color/light_grey"
                />

        </LinearLayout>

        <co.ledger.wallet.core.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock_keystore_bottom_text"
            android:gravity="center"
            android:textColor="@color/dark_grey"
            app:kerning="@dimen/medium_font_spacing"
            android:textSize="@dimen/small_font_size"
            app:fontStyle="regular"
            android:lineSpacingExtra="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/extra_large_margin"
            />

    </LinearLayout>
</ScrollView>