<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:layout_centerHorizontal="true">

        <com.ledger.ledgerwallet.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unplugged_welcome_welcome_to_your_new_wallet"
            android:id="@+id/textView3"
            android:textSize="@dimen/medium_font_size"
            app:kerning="@dimen/medium_font_spacing"
            android:layout_marginLeft="@dimen/huge_margin"
            android:layout_marginRight="@dimen/huge_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:gravity="center"
            android:textColor="@color/black"
            app:fontStyle="light"
            android:layout_gravity="center_horizontal" />
        <com.ledger.ledgerwallet.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unplugged_welcome_create_or_recover"
            android:id="@+id/textView4"
            android:textSize="@dimen/medium_font_size"
            app:kerning="@dimen/medium_font_spacing"
            android:layout_marginLeft="@dimen/huge_margin"
            android:layout_marginRight="@dimen/huge_margin"
            android:layout_marginBottom="@dimen/extra_large_margin"
            android:gravity="center"
            android:textColor="@color/dark_grey"
            app:fontStyle="light"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingLeft="@dimen/activity_border_margin"
            android:paddingRight="@dimen/activity_border_margin"
            android:layout_marginBottom="@dimen/extra_large_margin"
            android:background="@color/extra_light_grey"
            android:gravity="center_horizontal"
            android:id="@+id/create_wallet_button"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wallet"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_gravity="center_vertical" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <com.ledger.ledgerwallet.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unplugged_welcome_use_as_new"
                    android:id="@+id/create_wallet_text_1"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/medium_font_size"
                    app:kerning="@dimen/medium_font_spacing"
                    android:maxWidth="300dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_gravity="center_vertical" />

                <com.ledger.ledgerwallet.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unplugged_welcome_if_its_your_first_wallet"
                    android:id="@+id/create_wallet_text_2"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/small_font_size"
                    app:kerning="@dimen/small_font_spacing"
                    android:maxWidth="300dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingLeft="@dimen/activity_border_margin"
            android:paddingRight="@dimen/activity_border_margin"
            android:background="@color/extra_light_grey"
            android:gravity="center_horizontal"
            android:id="@+id/restore_wallet_button">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_restore"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <com.ledger.ledgerwallet.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unplugged_welcome_recover_wallet"
                    android:id="@+id/restore_wallet_text_1"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/medium_font_size"
                    app:kerning="@dimen/medium_font_spacing"
                    android:maxWidth="300dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_gravity="center_vertical" />

                <com.ledger.ledgerwallet.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unplugged_welcome_if_you_lost_your_wallet"
                    android:id="@+id/restore_wallet_text_2"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/small_font_size"
                    app:kerning="@dimen/small_font_spacing"
                    android:maxWidth="300dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>