<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_marginLeft="@dimen/large_margin"
    android:layout_marginRight="@dimen/large_margin"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">

    <com.ledger.ledgerwallet.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_tx_title"
        app:fontStyle="semiBold"
        android:textSize="@dimen/medium_font_size"
        app:kerning="@dimen/medium_font_spacing"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />

    <com.ledger.ledgerwallet.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default Wallet"
        android:textSize="@dimen/medium_font_size"
        app:kerning="@dimen/medium_font_spacing"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/extra_small_margin"
        android:id="@+id/dongle_name"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.ledger.ledgerwallet.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0265"
            android:textColor="@color/black"
            android:textSize="@dimen/extra_extra_large_font_size"
            app:kerning="@dimen/large_font_spacing"
            android:layout_marginRight="@dimen/extra_extra_small_margin"
            android:id="@+id/amount" />

        <com.ledger.ledgerwallet.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btc_acronyme"
            android:textColor="@color/black"
            app:fontStyle="light"
            android:textSize="@dimen/extra_extra_large_font_size"
            app:kerning="@dimen/large_font_spacing"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:src="@drawable/ic_bottom_transfer"
        android:layout_gravity="center_horizontal" />

    <com.ledger.ledgerwallet.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1MrpXW4dUz4FgFhNwkeqHqsWJDn12mPZPe"
        android:layout_marginLeft="@dimen/huge_margin"
        android:layout_marginRight="@dimen/huge_margin"
        android:textSize="@dimen/small_font_size"
        app:kerning="@dimen/small_font_spacing"
        android:textColor="@color/black"
        android:id="@+id/address"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <com.ledger.ledgerwallet.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_tx_date"
        android:id="@+id/date"
        android:textSize="@dimen/small_font_size"
        app:kerning="@dimen/small_font_spacing"
        android:textColor="@color/dark_grey"
        android:gravity="center"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_gravity="center_horizontal" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/include_dialog_actions"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/extra_extra_small_margin"
        android:id="@+id/dialog_action_bar" />

</LinearLayout>